using data-binding concept. Transfering data from one component to another using property binding

--- a/app/component2/component2.component.html
+++ b/app/component2/component2.component.html
@@ -1,4 +1,8 @@
 <p>
   component2 works!
 </p>
-<app-component3></app-component3>
+<app-component3>
+	<h1>hello from the app-component 3 content</h1>
+</app-component3>
+<ng-content></ng-content>
+
